--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
 
   nginx:
     image: nginx:latest
-    container_name: nginx-server
+    container_name: nginxxxxxxx
     ports:
       - "8080:80"
     volumes:
