--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,5 +5,8 @@ server {
     location / {
         root /usr/share/nginx/html;
         index index.html;
+        
+        
+        add_header 'Access-Control-Allow-Origin' 'http://localhost';
     }
 }
